# prompt_templates

./: .gitignore  README.md  main.py  pyproject.toml  tab_test.html  test_api.py  test_app.py  test_core.py  test_page.html  test_stats_ui.py
app/: database.py  models.py
app/routes/: api.py  web.py
app/services/: ai_service.py  template_service.py
baml_client/: __init__.py  async_client.py  inlinedbaml.py  parser.py  runtime.py  stream_types.py  sync_client.py  type_builder.py  type_map.py  types.py
baml_src/: clients.baml  prompt_trial.baml  template.baml
docs/: project_plan.md  prompt_trial_setup.md
static/css/: custom.css
static/js/: app.js
templates/: 404.html  500.html  base.html  index.html
templates/templates/: create.html  edit.html  list.html  use.html  view.html
