[project]
name = "prompt-templates"
version = "0.1.0"
description = "A web application for managing and generating prompt templates with AI assistance"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "baml-py>=0.212.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    "aiosqlite>=0.19.0",
    "pydantic>=2.0.0",
    "python-dateutil>=2.8.0",
    "aiohttp>=3.13.2",
    "dotenv>=0.9.9",
]
